--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -3,10 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <link th:href="@{/css/bootstrap.min.css}" href="../css/bootstrap.min.css" rel="stylesheet">
-
     <title>Title</title>
+    <style>
+        body{
+            margin-top: 150px;
+            align-items: center;
+            padding-top: 40px;
+            padding-bottom: 40px;
+        }
+        .form-signin{
+            width: 100%;
+            max-width: 330px;
+            padding: 15px;
+            margin: auto;
+        }
+        .form-signin .form-floating:focus-within {
+            z-index: auto;
+        }
+        .form-signin input[type="email"]{
+            margin-bottom: -1px;
+            border-bottom-right-radius: 0;
+            border-bottom-left-radius: 0;
+        }
+        .form-signin input[type="password"] {
+            margin-bottom: 10px;
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
+        }
+        .field-error {
+            border-color: #dc3545;
+            color: #dc3545;
+        }
+    </style>
 </head>
 <body>
-login
+<div class="container"><!--th:action부분으로 로그인햇을때 나오게한다.-->
+    <form class="form-signin" th:action th:object="${loginForm}" method="post">
+        <div>
+            <label for="loginId" class="form-label"></label>
+            <input type="email" class="form-control"  id="loginId" th:field="*{loginId}" aria-describedby="emailHelp" placeholder="id">
+        </div>
+        <div>
+            <label for="password" class="form-label"></label>
+            <input type="password" class="form-control" id="password" th:field="*{password}" placeholder="password" th:errorclass="field-error">
+            <div class="field-error" th:error="*{password}"/>
+        </div>
+        <button type="submit" class="w-100 btn btn-lg btn-primary">sign-in</button>
+    </form>
+</div>
 </body>
 </html>
