--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <link th:href="@{/css/bootstrap.min.css}" href="../css/bootstrap.min.css" rel="stylesheet">
-
-    <title>Title</title>
+    <title>project</title>
 </head>
 <body>
 <div class="navbar navbar-dark bg-dark">
     <div class="container-md">
         <a class="navbar-brand" th:onclick="|location.href='@{/}'|">Home</a>
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button class="btn btn-primary" th:onclick="|location.href='@{/logout}'|" type="submit">sign out</button>
+            <button class="btn btn-primary" th:onclick="|location.href='@{/signup}'|" type="submit">Sign up</button>
+            <button class="btn btn-primary" th:onclick="|location.href='@{/login}'|" type="submit">sign in</button>
         </div>
     </div>
 </div>
