jsp-servlet-study

--- a/src/main/resources/templates/checkTemp.html
+++ b/src/main/resources/templates/checkTemp.html
@@ -37,29 +37,32 @@
         </form>
     </div>
 </div>
-<form class="input-text">
-<!--    1번버튼-->
-    <div class="col-auto">
-        <label for="temp1" class="visually-hidden">temp</label>
-        <input type="text" readonly class="form-control-plaintext" id="temp1" value="온도" disabled>
-        <button type="submit" class="input-button btn btn-primary mb-3">온도 측정</button>
-    </div>
-</form>
-<form class="margin-button">
-<!--    2번 버튼-->
-    <div class="col-auto">
-        <label for="temp2" class="visually-hidden">temp</label>
-        <input type="text" readonly class="form-control-plaintext" id="temp2" value="온도2" disabled>
-        <button type="submit" class="input-button btn btn-primary mb-3">온도 측정</button>
-    </div>
-</form>
-<form class="margin-button">
-<!--    3번 버튼-->
-    <div class="col-auto">
-        <label for="temp3" class="visually-hidden">Email</label>
-        <input type="text" readonly class="form-control-plaintext" id="temp3" value="온도3" disabled>
-        <button type="submit" class="input-button btn btn-primary mb-3">온도 측정</button>
-    </div>
-</form>
+<div th:object="${serial}" method="post">
+    <form class="input-text">
+    <!--    1번버튼-->
+        <div class="col-auto">
+            <label for="temp1" class="data" t>temp</label>
+            <input type="text" readonly class="data form-control-plaintext" id="temp1" th:value="*{data}" disabled>
+            <button type="submit" class="input-button btn btn-primary mb-3" th:onclick="|location.href='/serial'|">온도측정</button>
+
+        </div>
+    </form>
+    <form class="margin-button">
+    <!--    2번 버튼-->
+        <div class="col-auto">
+            <label for="temp2" class="visually-hidden">temp</label>
+            <input type="text" readonly class="form-control-plaintext" id="temp2" value="온도2" disabled>
+            <button type="submit" class="input-button btn btn-primary mb-3">온도 측정</button>
+        </div>
+    </form>
+    <form class="margin-button">
+    <!--    3번 버튼-->
+        <div class="col-auto">
+            <label for="temp3" class="visually-hidden">Email</label>
+            <input type="text" readonly class="form-control-plaintext" id="temp3" value="온도3" disabled>
+            <button type="submit" class="input-button btn btn-primary mb-3">온도 측정</button>
+        </div>
+    </form>
+</div>
 </body>
 </html>
