jsp-controller-study4

--- a/src/main/resources/templates/checkTemp.html
+++ b/src/main/resources/templates/checkTemp.html
@@ -41,24 +41,21 @@
     <form class="input-text">
     <!--    1번버튼-->
         <div class="col-auto">
-            <label for="temp1" class="visually-hidden" >temp</label>
-            <input type="text" readonly class="data form-control-plaintext" id="temp1" value="온도" disabled>
+            <input type="text" readonly class="data form-control-plaintext" id="temp1" value="0" disabled>
             <button type="submit" class="input-button btn btn-primary mb-3" >온도측정</button>
         </div>
     </form>
     <form class="margin-button">
     <!--    2번 버튼-->
         <div class="col-auto">
-            <label for="temp2" class="visually-hidden">temp</label>
-            <input type="text" readonly class="form-control-plaintext" id="temp2" value="온도2" disabled>
+            <input type="text" readonly class="form-control-plaintext" id="temp2" value="0" disabled>
             <button type="submit" class="input-button btn btn-primary mb-3">온도 측정</button>
         </div>
     </form>
     <form class="margin-button">
     <!--    3번 버튼-->
         <div class="col-auto">
-            <label for="temp3" class="visually-hidden">Email</label>
-            <input type="text" readonly class="form-control-plaintext" id="temp3" value="온도3" disabled>
+            <input type="text" readonly class="form-control-plaintext" id="temp3" value="0" disabled>
             <button type="submit" class="input-button btn btn-primary mb-3">온도 측정</button>
         </div>
     </form>
