--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <link th:href="@{/css/bootstrap.min.css}" href="../css/bootstrap.min.css" rel="stylesheet">
     <title>Title</title>
+    <style>
+        .input-text{
+            align-items: center;
+            width: 100%;
+            max-width: 330px;
+            padding: 15px;
+            margin-right: auto;
+            margin-left: auto;
+            margin-top: 100px;
+        }
+    </style>
 </head>
 <body>
 <div class="navbar navbar-dark bg-dark">
@@ -16,9 +27,10 @@
         </form>
     </div>
 </div>
-<ul>
-    <li>'hello ' + ${data} = <span th:text="'hello ' + ${data}"></span></li>
-    <li>리터럴 대체 |hello ${data}| = <span th:text="|hello ${data}|"></span></li>
-</ul>
+<div>
+    <form class="input-text">
+        <p th:text="${data}">error</p>
+    </form>
+</div>
 </body>
 </html>
