--- a/src/main/resources/templates/checkTemp.html
+++ b/src/main/resources/templates/checkTemp.html
@@ -38,7 +38,7 @@
     </div>
 </div>
 <div>
-    <form class="input-text" th:action="@{/result}" method="post">
+    <form class="input-text" th:action="@{/result}" method="get">
     <!--    1번버튼-->
         <div class="col-auto">
             <input type="text" readonly class="data form-control-plaintext" id="temp1" disabled>
