--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -29,7 +29,7 @@
 </div>
 <div>
     <form class="input-text">
-        <p th:text="${data}">error</p>
+        <p th:text="${model}">error</p>
     </form>
 </div>
 </body>
