another way1-study

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -28,8 +28,8 @@
     </div>
 </div>
 <div>
-    <form class="input-text"><!--여기부분-->
-        <div >${Thread.currentThread().getId()}<div>
+    <form class="input-text" ><!--여기부분-->
+        <div th:value="${serial}"></div>
     </form>
 </div>
 </body>
