--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -27,10 +27,10 @@
         </form>
     </div>
 </div>
+
 <div>
-    <form class="input-text" ><!--여기부분-->
-        <div th:value="${serial}"></div>
-    </form>
+
+    <p class="input-text"th:text="${serial.tempCheck}" th:value="${serial.tempCheck}"></p>
 </div>
 </body>
 </html>
