--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -37,7 +37,7 @@
     </style>
 </head>
 <body>
-<div class="container"><!--th:action부분으로 로그인햇을때 나오게한다.-->
+<div class="container">
     <form class="form-signin" th:action th:object="${loginForm}" method="post">
         <div>
             <label for="loginId" class="form-label"></label>
